# MASt3R-SLAM

./: .gitignore  lietorch.py  main.py  mast3r_slam_backends.py  pyproject.toml  setup.py
mast3r_slam/: dataloader.py  frame.py  global_opt.py  mast3r_utils.py  tictoc.py  tracker.py
web-ui/: package-lock.json  package.json
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/api/drone/frame/: route.ts
web-ui/app/api/reconstruct/: route.ts
web-ui/app/api/scenes/[sceneId]/ply/: route.ts
web-ui/components/: demo-app.tsx  scene-viewer.tsx
